채팅 프초그램

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,8 @@
         "stop_token": "cpp",
         "streambuf": "cpp",
         "thread": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "sstream": "cpp",
+        "map": "cpp"
     }
 }
